--- a/views/home.ejs
+++ b/views/home.ejs
@@ -308,7 +308,7 @@
              <div class="product-img"><img src="<%=item.pimage%>" alt=""></div>
              <div class="dets2">
                <div class="product-desc"><span><%=item.pname%></span></div>
-             <div class="product-price"><span><%=item.price%></span><span id="discount">30% OFF</span></div>
+             <div class="product-price"><span>₹<%=item.price%></span><span id="discount">30% OFF</span></div>
              <a href="/product/<%=item._id%>"><i class="ri-arrow-right-line arrow"></i></a>
              <div class="overlay2"></div>
             </div>
