--- a/public/stylesheets/productBuy.css
+++ b/public/stylesheets/productBuy.css
@@ -57,7 +57,6 @@
   .productImage{
     width: 30vw;
     height: 68vh;
-    background-color: red;
     border-radius: 10px;
   }
   .product-Offers{
@@ -154,6 +153,6 @@
   .productImage>img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     border-radius: 10px;
   }
