--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -33,7 +33,7 @@
     .frame>img{
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: fill;
         border-radius: 7px;
     }
     .item-name>h5{
