--- a/views/allProducts.ejs
+++ b/views/allProducts.ejs
@@ -1,6 +1,13 @@
 <% include ./Partials/header.ejs %>
 <title>Create Product</title>
 <link rel="stylesheet" href="/stylesheets/allProducts.css">
+<style>
+    .imageFrame>img{
+        width: 100% !important;
+        height: 100% !important;
+        object-fit: fill !important;
+    }
+</style>
 
 <div class="allproducts">
 
