--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -237,7 +237,7 @@ document.getElementById('rzp-button1').onclick = async function(e){
         // alert(response.razorpay_payment_id);
         // alert(response.razorpay_order_id);
         // alert(response.razorpay_signature)
-        window.location.href = 'http://localhost:3000/check';
+        window.location.href = 'https://amazonclone-webproject.onrender.com/check';
 
 $.ajax({
     url: 'http://localhost:3000/pay-verify',
