--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -170,7 +170,7 @@
         <div class="frame"><img src="<%=item.pimage%>" alt=""></div>
         <div class="itemDets">
             <div class="item-name"><h5><%=item.pname%></h5></div>
-            <div class="item-price"><h6><%=item.price%></h6></div>
+            <div class="item-price"><h6>₹<%=item.price%></h6></div>
             <div class="quantity">
                 <a href="/remove/<%=item._id%>">remove</a>
             </div>
